Primer commit practicando con ASP.Net 6 (Aplicado Create y Delete en la tabla Productos)

--- a/RunGroopWebApp/Views/Home/Index.cshtml
+++ b/RunGroopWebApp/Views/Home/Index.cshtml
@@ -12,6 +12,10 @@
 *@
 
 <div class="text-center">
+    <div class="Encabezado">
+        <h3>Productos</h3>
+    </div>
+
     <table class="table table-striped">
         <thead>
             <tr>
